2014-08-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus-art.el (gnus-hidden-properties): Drop the evil `intangible'.

2014-08-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-sum.el (gnus-summary-expire-articles): Revert.

2014-08-05  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to
	the gnus-summary-article-expire-hook should be told where the function
	is going. In particular, the Gnus registry might want to know.

2014-08-03  Paul Eggert  <eggert@cs.ucla.edu>

	Don't mishandle year-9999 dates (Bug#18176).
	* parse-time.el (parse-time-rules):
	Allow years up to most-positive-fixnum.
	* time-date.el (date-to-time):
	Pass "Specified time is not representable" errors through.

2014-07-31  Tassilo Horn  <tsdh@gnu.org>

	* gnus-msg.el (gnus-inews-insert-gcc): Allow `gcc-self' to be a list of
	groups and t.

2014-07-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-utils.el (gnus-recursive-directory-files):
	Unify hard or symbolic links (bug#18063).

2013-07-17  Albert Krewinkel  <albert@zeitkraut.de>

	* gnus-msg.el (gnus-configure-posting-style):
	Allow string replacements in values when matching against a header.

2014-07-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-start.el (gnus-dribble-read-file): Don't stop the auto-saving of
	the dribble buffer even when it is shrunk a lot.
	<http://thread.gmane.org/gmane.emacs.gnus.user/16923>

2014-06-26  Glenn Morris  <rgm@gnu.org>

	* mm-util.el (help-function-arglist): Remove outdated declaration.

2014-06-24  Andreas Schwab  <schwab@linux-m68k.org>

	* html2text.el (html2text-get-attr): Rewrite to handle spaces in quoted
	attribute values.  (Bug#17834)

2013-06-22  Dmitry Antipov  <dmantipov@yandex.ru>

	* gnus-sum.el (gnus-summary-edit-article-done):
	Prefer point-marker to copy-marker of point.

2014-06-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (install-el, install-el-elc): Compress .el files.